--- a/css/3_B2B-sign-in-edit-file.css
+++ b/css/3_B2B-sign-in-edit-file.css
@@ -1,6 +1,10 @@
 * {
   outline: 1px solid red;
 }
+body {
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
 
 input:focus {
   color: #000 !important;
