--- a/css/1_member-center.css
+++ b/css/1_member-center.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 html {
   font-size: 20px;
@@ -40,7 +40,7 @@ body {
   overflow: hidden;
   border-radius: 50%;
   top: -100px;
-  right: 430px;
+  right: calc(50% - 95px);
   border: 3px solid #000;
 }
 
@@ -64,6 +64,10 @@ body {
   border-radius: 0px;
   font-weight: 600;
   height: 2.5rem;
+}
+
+.btn:focus {
+  border: none;
 }
 
 .sort {
@@ -111,7 +115,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -128,6 +132,11 @@ body {
 .like.liked {
   color: #ed5b4c;
   font-weight: 900;
+}
+
+.view-more {
+  font-weight: 600;
+  text-align: center;
 }
 
 /* 小卡彈跳蓋板 */
@@ -152,47 +161,30 @@ iframe {
   border: 3px solid #000;
 }
 
+.sub-info {
+  font-size: 0.7rem;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.qr-code-lg {
+  background-color: transparent;
+}
+
 /* ----------media query---------- */
 @media (min-width: 769px) {
   html {
     font-size: 20px;
   }
 
-  .main-info {
-    font-size: 1rem;
-  }
-
-  .sub-info {
-    font-size: 0.7rem;
+  .c-row1 {
+    flex-wrap: ;
   }
 }
 
 @media (min-width: 992px) {
-  .space {
-    height: 10rem;
-  }
-
-  .section-title img {
-    width: 25vh;
-  }
-
-  .edit {
-    flex-direction: column;
-  }
-
-  .edit button {
-    margin: 0.5rem 0;
-  }
-
-  .ticket {
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-
-  .close {
-    right: -30%;
-    top: -20%;
-  }
 }
 
 @media (min-width: 1200px) {
@@ -201,18 +193,6 @@ iframe {
 @media (max-width: 768px) {
   html {
     font-size: 12px;
-  }
-
-  .space {
-    height: 8rem;
-  }
-
-  .section-title img {
-    width: 20vh;
-  }
-
-  .btn-s {
-    font-size: 1.5rem;
   }
 
   .main-info {
@@ -224,72 +204,25 @@ iframe {
     font-size: 1.4rem;
     line-height: 1.7rem;
   }
-
-  .edit {
-    flex-direction: row;
-  }
-
-  .edit button {
-    margin: 0.5rem 1.5rem;
-  }
-
-  .ticket {
-    align-items: center;
-    margin-bottom: 3rem;
-  }
-
-  .sm-none {
-    display: none;
-  }
-
-  .close {
-    right: -12%;
-    top: -10%;
-  }
 }
 
 /* ----------order status---------- */
-
-.btn-s {
-  border: 3px solid #000;
-  background-color: #fff;
-  border-radius: 0%;
-  width: 25%;
-  padding: 2% 0;
-}
-
-.btn-select {
-  background-color: #ffc024;
-  border: 3px solid #000;
-}
-
-.order {
-  border: 3px solid #000;
-  background-color: #fff;
-}
 
 .main-info {
   font-weight: bold;
   letter-spacing: 2.55px;
 }
 
-.edit {
-  text-align: center;
-  display: flex;
-}
-
-.edit button {
+.feedback {
   width: 48px;
   height: 48px;
   border: none;
 }
 
 .delete {
-  background: url(../imgs/member/cancel.svg) center no-repeat;
-}
-
-.feedback {
-  background: url(../imgs/member/feedback.svg) center no-repeat;
+  width: 48px;
+  height: 48px;
+  border: none;
 }
 
 .button:focus {
@@ -298,4 +231,5 @@ iframe {
 
 .qr-code-lg {
   background-color: transparent;
+  border: none;
 }
