--- a/css/00_navbar.css
+++ b/css/00_navbar.css
@@ -1,193 +1,194 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Noto Sans TC", sans-serif;
-    font-family: "Roboto", sans-serif;
-    overflow-x: hidden;
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
-    z-index: 100;
+  z-index: 100;
 }
 
 .navbar {
-    background-color: #FFC024;
-    border: 3px solid black;
+  background-color: #ffc024;
+  border: 3px solid black;
 }
 
 .nav-item {
-    list-style: none;
+  list-style: none;
 }
 
 .nav-link {
-    color: #000;
-    font-family: "Noto Sans TC", sans-serif;
+  color: #000;
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 16px;
 }
 
 .nav-link:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .nav-item.active a {
-    color: #fff;
+  color: #fff;
 }
 
 .header-search {
-    position: relative;
+  position: relative;
 }
 
 .search {
-    border: 3px solid #000;
-    height: 38px;
+  border: 3px solid #000;
+  height: 38px;
 }
 
 .search:focus {
-    border: 3px solid #168FA4;
-    background-color: #168FA4;
+  border: 3px solid #168fa4;
+  background-color: #168fa4;
 }
 
 textarea:focus,
 input:focus {
-    color: #fff;
+  color: #fff;
 }
 
 .search-icon {
-    top: 5px;
-    right: 8px;
-    position: absolute;
-    background: transparent;
-    border: none;
-    cursor: pointer;
+  top: 5px;
+  right: 8px;
+  position: absolute;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .dropdown-menu {
-    background-color: transparent;
-
+  background-color: transparent;
 }
 
 .dropdown-item {
-    float: none;
-    color: black;
-    background-color: #FFC024;
-    border: 3px solid #000;
-    margin: 2px 0;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+  float: none;
+  color: black;
+  background-color: #ffc024;
+  border: 3px solid #000;
+  margin: 2px 0;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 .dropdown-item:hover,
 .one-item:hover {
-    background-color: #168FA4;
-    color: #fff;
+  background-color: #168fa4;
+  color: #fff;
 }
 
 .dropdown:hover .dropdown-item {
-    display: block;
+  display: block;
 }
-
 
 /* 大版購物車dropdown視窗框 */
 .cartnav-dropdown {
-    display: none;
-    top: 65px;
-    right: 0;
-    min-width: 500px;
-    min-height: 200px;
-    background-color: #FFC026;
-    border: 3px solid black;
+  display: none;
+  top: 65px;
+  right: 0;
+  min-width: 500px;
+  min-height: 200px;
+  background-color: #ffc026;
+  border: 3px solid black;
 }
 
 /* 購物車一列 */
 .one-item {
-    border-bottom: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 /* 隱藏溢出文字 */
 .cartnav-dropdown .title {
-    overflow: hidden;
-    text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* 圖片 */
 
 .one-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .item-info .title {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .delete {
-    color: black;
-    font-size: 1.5rem;
-    cursor: pointer;
+  color: black;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .delete:hover {
-    color: black;
+  color: black;
 }
-
-
-
-
-
-
 
 /* ----------media query---------- */
 @media (min-width: 993px) {
-    .nav-link {
-        margin-right: 40px;
-    }
+  html {
+    font-size: 20px;
+  }
 
-    .lg-none {
-        display: none;
-    }
+  .nav-link {
+    margin-right: 40px;
+  }
 
-    .cart-nav-small {
-        display: none;
-    }
+  .lg-none {
+    display: none;
+  }
+
+  .cart-nav-small {
+    display: none;
+  }
 }
 
 @media (max-width: 992px) {
-    .header-search {
-        display: none;
+
+  .header-search {
+    display: none;
+  }
+
+  .navbar-collapse {
+    text-align: center;
+  }
+
+  .header-icon {
+    display: block;
+  }
+
+  .member {
+    width: 50px;
+    height: 50px;
+  }
+
+  .sm-none {
+    display: none;
+  }
+
+  /* 小版購物車dropdown視窗框 */
+  .cart-nav-small {
+    display: none;
+    min-height: 200px;
+    min-width: 300%;
+    top: 70px;
+    right: -10px;
+    background-color: #ffc026;
+    border: 3px solid black;
+  }
+}
+
+@media (max-width: 768px) {
+    html {
+      font-size: 12px;
     }
-
-    .navbar-collapse {
-        text-align: center;
-    }
-
-    .header-icon {
-        display: block;
-    }
-
-    .member {
-        width: 50px;
-        height: 50px;
-    }
-
-    .sm-none {
-        display: none;
-    }
-
-    /* 小版購物車dropdown視窗框 */
-    .cart-nav-small {
-        display: none;
-        min-height: 200px;
-        min-width: 300%;
-        top: 70px;
-        right: -10px;
-        background-color: #FFC026;
-        border: 3px solid black;
-    }
-
-
-
 }
