--- a/css/00_navbar.css
+++ b/css/00_navbar.css
@@ -70,6 +70,7 @@ input:focus {
 .dropdown-item {
   float: none;
   color: black;
+  font-size: 16px;
   background-color: #ffc024;
   border: 3px solid #000;
   margin: 2px 0;
