--- a/css/1_member-center.css
+++ b/css/1_member-center.css
@@ -41,7 +41,7 @@ body {
   border-radius: 50%;
   top: -100px;
   right: calc(50% - 95px);
-  border: 3px solid #000;
+  /* border: 3px solid #000; */
 }
 
 .avatar img {
@@ -172,6 +172,595 @@ iframe {
 .qr-code-lg {
   background-color: transparent;
 }
+
+/* Animation css */
+
+html,
+    body,
+    main,
+    section,
+    div {
+        margin: 0;
+        padding: 0;
+    }
+
+    html {
+        overflow: hidden;
+    }
+
+    main {
+        background-color: transparent;
+        width: 100vw;
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .path {
+        /* background-color: rgb(30, 30, 30); */
+        /* border: 1vh solid blue; */
+        border-radius: 10vh;
+        width: 90vw;
+        height: 50vh;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 1fr 20vh 1fr;
+        overflow: hidden;
+        margin-right: 430px;
+    }
+
+    .pac-m,
+    .pac-f {
+        width: 20vh;
+        height: 20vh;
+        grid-row: 2;
+        grid-column: 1;
+        display: grid;
+        grid-template-columns: 80%;
+        grid-template-rows: 80%;
+    }
+
+    .pac {
+        width: 20vh;
+        height: 20vh;
+        border-radius: 50%;
+    }
+
+    .p-eye {
+        background-color: rgb(30, 30, 30);
+        width: 2vh;
+        height: 2vh;
+        border-radius: 50%;
+        grid-column: 1;
+        grid-row: 1;
+        transform: translate(12vh, 4vh);
+    }
+
+    .p-top {
+        background: linear-gradient(to bottom, #FFC639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        animation: mouth-up .5s ease-in-out infinite;
+    }
+
+    .p-bottom {
+        background: linear-gradient(to top, #FFC639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        transform: translateY(-.25vh);
+        animation: mouth-down .5s ease-in-out infinite;
+        */
+    }
+
+    .lipstick-top {
+        background-color: #FF4E42;
+        width: 1vh;
+        height: 1vh;
+        border-radius: 50% 50% 0 0;
+        transform: translate(19vh, 9vh);
+    }
+
+    .lipstick-bottom {
+        background-color: #FF4E42;
+        width: 1vh;
+        height: 1vh;
+        border-radius: 0 0 50% 50%;
+        transform: translate(19vh, 10vh);
+    }
+
+    .bow {
+        width: 12vh;
+        height: 4vh;
+        grid-column: 1;
+        grid-row: 1;
+        transform: translate(1vh, -2vh) rotateZ(-20deg);
+        display: flex;
+        align-items: center;
+    }
+
+    .b1 {
+        width: 0;
+        height: 0;
+        border-left: 4vh solid #FF4E42;
+        border-top: 2vh solid transparent;
+        border-bottom: 2vh solid transparent;
+        border-radius: .8vh;
+        transform: translateX(1vh);
+    }
+
+    .b2 {
+        width: 0;
+        height: 0;
+        border-right: 4vh solid #FF4E42;
+        border-top: 2vh solid transparent;
+        border-bottom: 2vh solid transparent;
+        border-radius: .8vh;
+        transform: translateX(-1vh);
+    }
+
+    .knot {
+        background-color: #FF4E42;
+        width: 2.5vh;
+        height: 2.5vh;
+        border-radius: 50%;
+    }
+
+    .pac-f {
+        animation: f-chase 24s linear forwards;
+        */
+    }
+
+    .pac-m {
+        animation: m-chase 24s linear 3s forwards;
+        transform: translateX(-20vh);
+    }
+
+    .heart {
+        width: 6vh;
+        height: 6vh;
+        grid-row: 1;
+        align-self: flex-end;
+        justify-self: center;
+        display: flex;
+        animation: heart-pop 3s linear 13s forwards;
+        opacity: 0;
+    }
+
+    .heart-l,
+    .heart-r {
+        background-color: #FF4E42;
+        width: 4vh;
+        height: 4.5vh;
+        border-radius: 50% 50% 0 0;
+    }
+
+    .heart-l {
+        transform: translateX(.85vh) rotateZ(-48deg);
+    }
+
+    .heart-r {
+        transform: translateX(-.85vh) rotateZ(48deg);
+    }
+
+    .pac-b {
+        width: 10vh;
+        height: 10vh;
+        grid-row: 2;
+        grid-column: 1;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%;
+        transform: translateX(-20vh);
+        animation: b-walk 24s linear 3s forwards;
+    }
+
+    .b-top {
+        background: linear-gradient(to bottom, #ffc639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        border-radius: 50%;
+        animation: mouth-up .5s ease-in-out infinite;
+    }
+
+    .b-bottom {
+        background: linear-gradient(to top, #ffc639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        border-radius: 50%;
+        transform: translateY(-.25vh);
+        animation: mouth-down .5s ease-in-out infinite;
+        */
+    }
+
+    .b-eye {
+        background-color: rgb(30, 30, 30);
+        width: 1vh;
+        height: 1vh;
+        border-radius: 50%;
+        grid-column: 1;
+        grid-row: 1;
+        transform: translate(6vh, 2vh);
+    }
+
+    .b-bow {
+        width: 6vh;
+        height: 2vh;
+        grid-column: 1;
+        grid-row: 1;
+        transform: translate(.5vh, -1vh) rotateZ(-20deg);
+        display: flex;
+        align-items: center;
+    }
+
+    .b-b1 {
+        width: 0;
+        height: 0;
+        border-left: 2vh solid rgb(250, 100, 150);
+        border-top: 1vh solid transparent;
+        border-bottom: 1vh solid transparent;
+        border-radius: .4vh;
+        transform: translateX(.5vh);
+    }
+
+    .b-b2 {
+        width: 0;
+        height: 0;
+        border-right: 2vh solid rgb(250, 100, 150);
+        border-top: 1vh solid transparent;
+        border-bottom: 1vh solid transparent;
+        border-radius: .4vh;
+        transform: translateX(-.5vh);
+    }
+
+    .b-knot {
+        background-color: rgb(250, 100, 150);
+        width: 1.25vh;
+        height: 1.25vh;
+        border-radius: 50%;
+    }
+
+    .bottle {
+        width: 2vh;
+        height: 5vh;
+        transform: translate(11vh, -7.5vh) rotateZ(-90deg);
+    }
+
+    .bubble {
+        background-color: orange;
+        width: .75vh;
+        height: .75vh;
+        margin: 0 auto;
+        border-radius: 50% 50% 0 0;
+    }
+
+    .lid {
+        background-color: rgb(250, 100, 150);
+        width: 2vh;
+        height: 1vh;
+        border-radius: .75vh .75vh 0 0;
+    }
+
+    .jar {
+        background-color: pink;
+        width: 2vh;
+        height: 3vh;
+        border-radius: 0 0 .5vh .5vh;
+    }
+
+    .pac-t {
+        width: 15vh;
+        height: 15vh;
+        grid-row: 2;
+        grid-column: 1;
+        align-self: flex-end;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%;
+        transform: translateX(-20vh);
+        animation: t-walk 24s linear 4s forwards;
+    }
+
+    .t-top {
+        background: linear-gradient(to bottom, #FFC639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        border-radius: 50%;
+        animation: mouth-up .5s ease-in-out infinite;
+    }
+
+    .t-bottom {
+        background: linear-gradient(to top, #FFC639 0% 50%, transparent 50% 100%);
+        grid-column: 1;
+        grid-row: 1;
+        border-radius: 50%;
+        transform: translateY(-.25vh);
+        animation: mouth-down .5s ease-in-out infinite;
+        
+    }
+
+    .t-eye {
+        background-color: rgb(30, 30, 30);
+        width: 1.5vh;
+        height: 1.5vh;
+        border-radius: 50%;
+        grid-column: 1;
+        grid-row: 1;
+        transform: translate(9vh, 3vh);
+    }
+
+    .cell-phone {
+        background-color: rgb(0, 0, 0);
+        width: 3vh;
+        height: 5vh;
+        border-radius: .4vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: translate(15vh, -7vh) rotateZ(20deg);
+    }
+
+    .c-screen {
+        background-color: rgb(240, 240, 240);
+        width: 2.25vh;
+        height: 4vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .msg-1 {
+        background-color: rgb(140, 140, 200);
+        width: 1.5vh;
+        height: .75vh;
+        margin-left: .2vh;
+        border-radius: 25%;
+    }
+
+    .msg-2 {
+        background-color: rgb(100, 100, 100);
+        width: 1.5vh;
+        height: .5vh;
+        align-self: flex-end;
+        margin-right: .2vh;
+        border-radius: 25%;
+    }
+
+    .msg-3 {
+        background-color: rgb(140, 140, 200);
+        width: 1.5vh;
+        height: .6vh;
+        margin-left: .2vh;
+        border-radius: 25%;
+    }
+
+    @keyframes mouth-up {
+        to {
+            transform: rotateZ(-15deg);
+        }
+    }
+
+    @keyframes mouth-down {
+        to {
+            transform: translateY(-.25vh) rotateZ(15deg);
+        }
+    }
+
+    @keyframes f-chase {
+        0% {
+            transform: translateX(-20vh);
+        }
+
+        5% {
+            transform: translateX(calc(45vw - 10vh));
+        }
+
+        10% {
+            transform: translateX(calc(45vw - 10vh));
+        }
+
+        12% {
+            transform: translateX(calc(90vw + 1vh));
+        }
+
+        17% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+        }
+
+        24% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(180deg);
+        }
+
+        29% {
+            transform: translateX(-20vh) rotateY(180deg);
+        }
+
+        38% {
+            transform: translateX(-20vh) rotateY(0deg);
+        }
+
+        42% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+        }
+
+        47.5% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(180deg);
+        }
+
+        49.5% {
+            transform: translateX(45vw) rotateY(180deg);
+        }
+
+        50.5% {
+            transform: translateX(46vw) rotateY(180deg);
+        }
+
+        51.5% {
+            transform: translateX(45vw) rotateY(180deg);
+        }
+
+        55.5% {
+            transform: translateX(45vw) rotateY(180deg);
+            opacity: 1;
+        }
+
+        62.5% {
+            transform: translateX(45vw) rotateY(180deg);
+            opacity: 0;
+        }
+
+        63% {
+            transform: translateX(-20vh) rotateY(0deg);
+            opacity: 0;
+        }
+
+        68% {
+            transform: translateX(-20vh) rotateY(0deg);
+            opacity: 1;
+        }
+
+        98% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+            opacity: 1;
+        }
+
+        100% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+            opacity: 1;
+        }
+    }
+
+    @keyframes m-chase {
+        0% {
+            transform: translateX(-20vh);
+        }
+
+        10% {
+            transform: translateX(calc(90vw + 1vh));
+        }
+
+        10.1% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(180deg);
+        }
+
+        14% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(180deg);
+        }
+
+        24% {
+            transform: translateX(-20vh) rotateY(180deg);
+        }
+
+        32% {
+            transform: translateX(-20vh) rotateY(0deg);
+        }
+
+        37% {
+            transform: translateX(calc(45vw - 20vh)) rotateY(0deg);
+        }
+
+        38% {
+            transform: translateX(calc(44vw - 20vh)) rotateY(0deg);
+        }
+
+        39% {
+            transform: translateX(calc(45vw - 20vh)) rotateY(0deg);
+        }
+
+        43% {
+            transform: translateX(calc(45vw - 20vh)) rotateY(0deg);
+            opacity: 1;
+        }
+
+        50% {
+            transform: translateX(calc(45vw - 20vh)) rotateY(0deg);
+            opacity: 0;
+        }
+
+        51% {
+            transform: translateX(-20vh) rotateY(0deg);
+            opacity: 0;
+        }
+
+        61% {
+            transform: translateX(-20vh) rotateY(0deg);
+            opacity: 1;
+        }
+
+        91% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+            opacity: 1;
+        }
+
+        100% {
+            transform: translateX(calc(90vw + 1vh)) rotateY(0deg);
+            opacity: 1;
+        }
+    }
+
+    @keyframes heart-pop {
+        0% {
+            opacity: 0;
+            transform: scale(.1);
+            ;
+        }
+
+        20% {
+            opacity: 1;
+            transform: scale(1.8);
+        }
+
+        40% {
+            opacity: 1;
+            transform: scale(1);
+        }
+
+        100% {
+            opacity: 1;
+            transform: scale(1) translateY(-14vh);
+        }
+    }
+
+    @keyframes b-walk {
+        0% {
+            transform: translateX(-20vh) translateY(-9.5vh) rotateZ(-30deg);
+        }
+
+        61% {
+            transform: translateX(-20vh) translateY(-9.5vh) rotateZ(-30deg);
+        }
+
+        91% {
+            transform: translateX(calc(90vw + 1vh)) translateY(-9.5vh) rotateZ(-30deg);
+        }
+
+        100% {
+            transform: translateX(calc(90vw + 1vh)) translateY(-9.5vh) rotateZ(-30deg);
+        }
+    }
+
+    @keyframes t-walk {
+        0% {
+            transform: translateX(-20vh);
+        }
+
+        61% {
+            transform: translateX(-20vh);
+        }
+
+        91% {
+            transform: translateX(calc(90vw + 1vh));
+        }
+
+        100% {
+            transform: translateX(calc(90vw + 1vh));
+        }
+    }
+
+
+
+
 
 /* ----------media query---------- */
 @media (min-width: 769px) {
