--- a/css/3_B2B-sign-in-edit-file.css
+++ b/css/3_B2B-sign-in-edit-file.css
@@ -263,6 +263,9 @@ button:disabled {
 }
 
 @media screen and (max-width: 576px) {
+  .background {
+    height: 1150px;
+  }
   .pictureadd {
     width: 75px;
     height: 75px;
