--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 html {
   font-size: 20px;
@@ -134,11 +134,41 @@ label {
   font-weight: 600;
 }
 
-.eyes {
-  width: 2.2rem;
-  /* height: 45px; */
-  margin-left: 0.625rem;
+/* eyes css animation */
+
+.move-area {
+  /*normally use body*/
+  width: 100vw;
+  /* height: 100vh; */
+  padding: 10% 45%;
+  padding: 0px;
 }
+.eyes {
+  width: 100%;
+}
+
+.eye {
+  position: relative;
+  display: inline-block;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  background: #fff;
+  border: 2px solid #000;
+}
+.eye:after {
+  /*pupil*/
+  position: absolute;
+  bottom: 17px;
+  right: 10px;
+  width: 10px;
+  height: 10px;
+  background: #000;
+  border-radius: 50%;
+  content: " ";
+}
+
+/* eyes css end */
 
 .terms {
   background-color: #fff;
